# lspi-gcc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
debug/: GD32F4xx.svd
debug/openocd/: lspi-gcc.cfg
lib/: CMakeLists.txt  gd32f4xx.lds
lib/src/: start.c  syscall.c
src/: CMakeLists.txt  main.c  systick.c
